--- a/Cost Track/Cost Track/Views/XIBs/CostSheetEntryViewController.xib
+++ b/Cost Track/Cost Track/Views/XIBs/CostSheetEntryViewController.xib
@@ -17,7 +17,13 @@
                 <outlet property="amountBarView" destination="6au-o4-Src" id="gRX-i6-9nF"/>
                 <outlet property="amountTextView" destination="zao-BM-Sjp" id="q80-Nw-yRT"/>
                 <outlet property="categoryLabel" destination="aEQ-39-8kr" id="yxx-aN-8uK"/>
+                <outlet property="categoryPickerHeightConstraint" destination="aBL-DU-Hcg" id="zaX-Ob-m3y"/>
+                <outlet property="categoryPickerHideTopConstraint" destination="bGq-Y7-XOH" id="HAf-7m-K2X"/>
+                <outlet property="categoryPickerShowTopConstraint" destination="xLN-RM-69P" id="0Xf-Iz-lPe"/>
                 <outlet property="dateLabel" destination="tfy-YN-Muo" id="K3W-ad-7P1"/>
+                <outlet property="datePickerHeightConstraint" destination="aVd-Pe-5Gl" id="dSD-RQ-T3G"/>
+                <outlet property="datePickerHideTopConstraint" destination="Qbd-HP-ym6" id="DPG-sj-9CD"/>
+                <outlet property="datePickerShowTopConstraint" destination="BDq-z8-wTx" id="kOg-zJ-r5h"/>
                 <outlet property="descriptionTextView" destination="OcW-2E-2Hg" id="EbO-99-0A2"/>
                 <outlet property="entryCategoryPicker" destination="Qvf-8Y-Tff" id="65F-2B-MuN"/>
                 <outlet property="entryDatePicker" destination="dVv-Mq-aOk" id="oTH-ZZ-FFt"/>
@@ -186,12 +192,18 @@
                     </userDefinedRuntimeAttributes>
                 </textView>
                 <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="dVv-Mq-aOk" customClass="EntryDatePicker" customModule="Cost_Track" customModuleProvider="target">
-                    <rect key="frame" x="0.0" y="495.5" width="375" height="171.5"/>
+                    <rect key="frame" x="0.0" y="667" width="375" height="1"/>
                     <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                    <constraints>
+                        <constraint firstAttribute="height" constant="1" id="aVd-Pe-5Gl"/>
+                    </constraints>
                 </view>
                 <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="Qvf-8Y-Tff" customClass="EntryCategoryPicker" customModule="Cost_Track" customModuleProvider="target">
-                    <rect key="frame" x="-0.5" y="495.5" width="375" height="171.5"/>
+                    <rect key="frame" x="-0.5" y="667" width="375" height="1"/>
                     <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                    <constraints>
+                        <constraint firstAttribute="height" constant="1" id="aBL-DU-Hcg"/>
+                    </constraints>
                 </view>
             </subviews>
             <color key="backgroundColor" red="1" green="1" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
@@ -202,35 +214,33 @@
                 <constraint firstItem="OcW-2E-2Hg" firstAttribute="width" secondItem="i5M-Pr-FkT" secondAttribute="width" id="C9n-WC-MhY"/>
                 <constraint firstItem="dVv-Mq-aOk" firstAttribute="centerX" secondItem="fnl-2z-Ty3" secondAttribute="centerX" id="EY4-I5-ooS"/>
                 <constraint firstItem="OcW-2E-2Hg" firstAttribute="height" secondItem="fnl-2z-Ty3" secondAttribute="height" multiplier="0.45" id="FMj-6F-xxg"/>
-                <constraint firstItem="fnl-2z-Ty3" firstAttribute="bottom" secondItem="Qvf-8Y-Tff" secondAttribute="bottom" id="LmD-rm-0oG"/>
                 <constraint firstItem="Qvf-8Y-Tff" firstAttribute="centerX" secondItem="fnl-2z-Ty3" secondAttribute="centerX" id="MjC-t0-Jw5"/>
                 <constraint firstItem="Geb-fA-wbP" firstAttribute="centerX" secondItem="fnl-2z-Ty3" secondAttribute="centerX" id="OwA-Az-iFA"/>
+                <constraint firstItem="dVv-Mq-aOk" firstAttribute="top" secondItem="fnl-2z-Ty3" secondAttribute="bottom" id="Qbd-HP-ym6"/>
                 <constraint firstItem="OcW-2E-2Hg" firstAttribute="top" secondItem="Geb-fA-wbP" secondAttribute="bottom" id="T2g-NP-XbA"/>
                 <constraint firstItem="Geb-fA-wbP" firstAttribute="top" secondItem="6au-o4-Src" secondAttribute="bottom" id="V22-4z-a9A"/>
                 <constraint firstItem="OcW-2E-2Hg" firstAttribute="centerX" secondItem="fnl-2z-Ty3" secondAttribute="centerX" id="YM5-UK-uCc"/>
                 <constraint firstItem="Geb-fA-wbP" firstAttribute="width" secondItem="i5M-Pr-FkT" secondAttribute="width" id="ZOj-2i-urB"/>
                 <constraint firstItem="dVv-Mq-aOk" firstAttribute="width" secondItem="i5M-Pr-FkT" secondAttribute="width" id="a6C-4L-9oY"/>
-                <constraint firstItem="fnl-2z-Ty3" firstAttribute="bottom" secondItem="dVv-Mq-aOk" secondAttribute="bottom" id="ffb-72-z7n"/>
-                <constraint firstItem="fnl-2z-Ty3" firstAttribute="bottom" secondItem="OcW-2E-2Hg" secondAttribute="bottom" constant="171.5" id="hZL-7K-jwb"/>
+                <constraint firstItem="Qvf-8Y-Tff" firstAttribute="top" secondItem="fnl-2z-Ty3" secondAttribute="bottom" id="bGq-Y7-XOH"/>
                 <constraint firstItem="6au-o4-Src" firstAttribute="top" secondItem="fnl-2z-Ty3" secondAttribute="top" id="icA-WI-itL"/>
                 <constraint firstItem="Qvf-8Y-Tff" firstAttribute="width" secondItem="i5M-Pr-FkT" secondAttribute="width" id="q0Q-kJ-k21"/>
                 <constraint firstItem="Qvf-8Y-Tff" firstAttribute="top" secondItem="OcW-2E-2Hg" secondAttribute="bottom" id="xLN-RM-69P"/>
             </constraints>
             <simulatedNavigationBarMetrics key="simulatedTopBarMetrics" prompted="NO"/>
             <viewLayoutGuide key="safeArea" id="fnl-2z-Ty3"/>
+            <variation key="default">
+                <mask key="constraints">
+                    <exclude reference="BDq-z8-wTx"/>
+                    <exclude reference="xLN-RM-69P"/>
+                </mask>
+            </variation>
         </view>
         <tapGestureRecognizer id="Wq4-65-bNT">
             <connections>
                 <action selector="dateViewTapped:" destination="-1" id="uJE-Do-Yd6"/>
             </connections>
         </tapGestureRecognizer>
-        <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" id="jVO-S8-SlK">
-            <rect key="frame" x="0.0" y="0.0" width="42" height="21"/>
-            <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
-            <fontDescription key="fontDescription" type="system" pointSize="17"/>
-            <nil key="textColor"/>
-            <nil key="highlightedColor"/>
-        </label>
         <tapGestureRecognizer id="9YS-sz-A54">
             <connections>
                 <action selector="categoryViewTapped:" destination="-1" id="Q1X-du-CLz"/>
