--- a/Cost Track/Cost Track/Views/Storyboards/Base.lproj/Main.storyboard
+++ b/Cost Track/Cost Track/Views/Storyboards/Base.lproj/Main.storyboard
@@ -20,7 +20,7 @@
                         <barButtonItem key="leftBarButtonItem" title="Add" id="99u-Dh-FRo">
                             <connections>
                                 <action selector="addNewCostSheetButtonPressed:" destination="BYZ-38-t0r" id="Zaq-8d-bWS"/>
-                                <segue destination="Zj1-Q9-6XZ" kind="show" id="ZPf-NA-428"/>
+                                <segue destination="Zj1-Q9-6XZ" kind="show" identifier="NewCostSheetSegue" id="ZPf-NA-428"/>
                             </connections>
                         </barButtonItem>
                         <rightBarButtonItems>
@@ -67,9 +67,9 @@
                         <viewLayoutGuide key="safeArea" id="KXR-Pp-7Gc"/>
                     </view>
                     <navigationItem key="navigationItem" title="New Cost Sheet" id="rvQ-IU-oDn">
-                        <barButtonItem key="rightBarButtonItem" title="Save" id="6vx-l0-fPT">
+                        <barButtonItem key="rightBarButtonItem" title="Create" id="6vx-l0-fPT">
                             <connections>
-                                <action selector="saveButtonPressed:" destination="Zj1-Q9-6XZ" id="WpD-ad-Dh5"/>
+                                <action selector="createButtonPressed:" destination="Zj1-Q9-6XZ" id="1BF-Yy-q5W"/>
                             </connections>
                         </barButtonItem>
                     </navigationItem>
