Added lastModifiedDate for costSheet

--- a/Cost Track/Cost Track/Views/XIBs/CostSheetTableViewCell.xib
+++ b/Cost Track/Cost Track/Views/XIBs/CostSheetTableViewCell.xib
@@ -40,9 +40,9 @@
                     <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="ByD-VW-Tdn" userLabel="Right container">
                         <rect key="frame" x="307.5" y="8" width="251.5" height="96.5"/>
                         <subviews>
-                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Date" textAlignment="right" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="YdG-YN-hAY">
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="14-Jul-18" textAlignment="right" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="YdG-YN-hAY">
                                 <rect key="frame" x="0.0" y="0.0" width="251.5" height="29"/>
-                                <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                                <fontDescription key="fontDescription" type="system" pointSize="12"/>
                                 <color key="textColor" red="0.71876982869999995" green="0.71876982869999995" blue="0.71876982869999995" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                                 <nil key="highlightedColor"/>
                             </label>
