--- a/Cost Track/Cost Track/Views/XIBs/ViewControllers/CostSheetViewController.xib
+++ b/Cost Track/Cost Track/Views/XIBs/ViewControllers/CostSheetViewController.xib
@@ -98,7 +98,7 @@
                         <outlet property="delegate" destination="-1" id="c6C-CJ-Yas"/>
                     </connections>
                 </tableView>
-                <textView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" textAlignment="center" translatesAutoresizingMaskIntoConstraints="NO" id="hMl-IW-r2K">
+                <textView clipsSubviews="YES" multipleTouchEnabled="YES" userInteractionEnabled="NO" contentMode="scaleToFill" editable="NO" textAlignment="center" selectable="NO" translatesAutoresizingMaskIntoConstraints="NO" id="hMl-IW-r2K">
                     <rect key="frame" x="0.0" y="144" width="375" height="523"/>
                     <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                     <string key="text">
