--- a/Cost Track/Cost Track/Views/XIBs/ViewControllers/MyCostSheetsViewController.xib
+++ b/Cost Track/Cost Track/Views/XIBs/ViewControllers/MyCostSheetsViewController.xib
@@ -83,7 +83,7 @@
                         <outlet property="delegate" destination="-1" id="Kw9-oZ-t6Z"/>
                     </connections>
                 </tableView>
-                <textView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" textAlignment="center" translatesAutoresizingMaskIntoConstraints="NO" id="Bu8-8y-Ll5">
+                <textView clipsSubviews="YES" multipleTouchEnabled="YES" userInteractionEnabled="NO" contentMode="scaleToFill" editable="NO" textAlignment="center" selectable="NO" translatesAutoresizingMaskIntoConstraints="NO" id="Bu8-8y-Ll5">
                     <rect key="frame" x="-0.5" y="144" width="375" height="523"/>
                     <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                     <string key="text">
