--- a/Cost Track/Cost Track/Views/Storyboards/Base.lproj/Main.storyboard
+++ b/Cost Track/Cost Track/Views/Storyboards/Base.lproj/Main.storyboard
@@ -26,6 +26,7 @@
                             <barButtonItem title="Set" id="E7o-6X-8ta">
                                 <connections>
                                     <action selector="settingsButtonPressed:" destination="BYZ-38-t0r" id="21r-Vn-u2P"/>
+                                    <segue destination="Ccc-bi-Y0m" kind="show" identifier="SettingsSegue" id="KMX-Fd-y9V"/>
                                 </connections>
                             </barButtonItem>
                             <barButtonItem title="Sear" id="ajH-sw-SPK">
@@ -246,6 +247,34 @@
                 <placeholder placeholderIdentifier="IBFirstResponder" id="KEk-k8-55Q" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
             <point key="canvasLocation" x="2754" y="109"/>
+        </scene>
+        <!--Settings Table View Controller-->
+        <scene sceneID="bs6-uG-mAK">
+            <objects>
+                <tableViewController id="Ccc-bi-Y0m" customClass="SettingsTableViewController" customModule="Cost_Track" customModuleProvider="target" sceneMemberID="viewController">
+                    <tableView key="view" clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" separatorStyle="default" rowHeight="-1" estimatedRowHeight="-1" sectionHeaderHeight="28" sectionFooterHeight="28" id="vgt-xm-jYi">
+                        <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
+                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                        <prototypes>
+                            <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" preservesSuperviewLayoutMargins="YES" selectionStyle="default" indentationWidth="10" reuseIdentifier="SettingsTableViewCellIdentifier" id="aTe-0E-Rsb">
+                                <rect key="frame" x="0.0" y="28" width="375" height="44"/>
+                                <autoresizingMask key="autoresizingMask"/>
+                                <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" preservesSuperviewLayoutMargins="YES" insetsLayoutMarginsFromSafeArea="NO" tableViewCell="aTe-0E-Rsb" id="zhS-zf-Bye">
+                                    <rect key="frame" x="0.0" y="0.0" width="375" height="43.5"/>
+                                    <autoresizingMask key="autoresizingMask"/>
+                                </tableViewCellContentView>
+                            </tableViewCell>
+                        </prototypes>
+                        <connections>
+                            <outlet property="dataSource" destination="Ccc-bi-Y0m" id="e1H-jH-hG7"/>
+                            <outlet property="delegate" destination="Ccc-bi-Y0m" id="7Df-Ot-6d9"/>
+                        </connections>
+                    </tableView>
+                </tableViewController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="BIP-RK-cOo" userLabel="First Responder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="1238" y="-652"/>
         </scene>
     </scenes>
 </document>
