--- a/Cost Track/Cost Track/Views/Storyboards/Base.lproj/Main.storyboard
+++ b/Cost Track/Cost Track/Views/Storyboards/Base.lproj/Main.storyboard
@@ -140,7 +140,7 @@
                     <connections>
                         <segue destination="VJY-cq-tDL" kind="show" identifier="CostSheetEntrySegue" id="pWF-n5-Vqd"/>
                         <segue destination="e0M-uA-qqC" kind="presentation" identifier="TransferEntrySegue" id="UfP-jf-kuQ"/>
-                        <segue destination="DT4-xC-FO1" kind="show" identifier="DirectTransferSegue" id="dQC-iJ-4SH"/>
+                        <segue destination="DT4-xC-FO1" kind="show" identifier="DirectAmountTransferSegue" id="dQC-iJ-4SH"/>
                     </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="pIF-24-eZY" userLabel="First Responder" sceneMemberID="firstResponder"/>
